#2.3 Navigation Bar part One

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,13 @@
 @import "reset.css";
 @import "status-bar.css";
 @import "header.css";
+@import "nav-bar.css";
 
- body {
+* {
+  box-sizing: border-box;
+}
+
+body {
   background-color: white;
   padding: 10px 20px;
   color: #020202;
@@ -11,6 +16,6 @@
     Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
- a {
+a {
   color: inherit;
 }
